# bash-backend

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/: app.py  config.py
src/dto/: __init__.py  poller_message.py
src/infra/repos/: bash_repo.py  clients.py
src/presentation/api/: router.py
src/presentation/sio/: sio_namespace.py  sio_server.py
src/protocols/repos/: __init__.py  clients.py
src/service/bash/: executor.py  poller.py
